Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11270

mbedTLS doesn't export mbedtls_ssl_config_free

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.2
    • None

    Description

      Current spec for mbedTLS doesn't export mbedtls_ssl_config_free and this leads to some memory leaks.
      It (mbedTLS) is used currently only in schannel and this call is missing there in schan_imp_dispose_session.

      Attachments

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              hater hater
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: