[MBEDTLS][SCHANNEL] Export mbedtls_ssl_config_free and use it. Patch by Peter Hater. CORE-11270 #resolve #comment Thanks!

svn path=/trunk/; revision=71362